--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Web Studio</title>
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Шапка страницы-->
@@ -141,7 +141,7 @@
               <label class="checkbox-label">
                 <input
                   type="checkbox"
-                  class="form-checkbox visualy-hidden"
+                  class="form-checkbox visually-hidden"
                   name="modal-checkbox"
                 />
                 <span class="icon-checkbox"></span>
